# kira.black

./: .gitignore  README.md
docs/: CNAME  galaxy.js
kira/: Makefile
kira/core/: Gemfile  Rakefile
kira/core/config/profiles/: base.yml  fitness.yml  therapy.yml
kira/core/lib/: kira.rb
kira/core/lib/kira/: orchestrator.rb  runtime.rb  sense_manager.rb  signal.rb  signal_queue.rb  types.rb
kira/core/lib/kira/chat/: client.rb  manager.rb  session.rb
kira/core/lib/kira/events/: engine.rb  event.rb  registry.rb  triggers.rb
kira/core/lib/kira/opencode/: bridge.rb  session_manager.rb
kira/core/lib/kira/output/: gateway.rb  payload_builder.rb  speak_decision.rb
kira/core/lib/kira/perception/: client.rb  frame.rb  signal_source.rb  unified_client.rb
kira/core/lib/kira/profiles/: loader.rb  profile.rb
kira/core/lib/kira/state/: distiller.rb  track.rb  (+3 more)
kira/core/test/: e2e_flow_test.rb  integration_opencode_test.rb  integration_test.rb  opencode_bridge_test.rb  orchestrator_test.rb  test_helper.rb  unified_client_test.rb
kira/core/test/integration/: orchestrator_test.rb  pipeline_test.rb
kira/examples/elevenlabs_voice/: tts.py
kira/perception/: kira_perception.py  kira_test.py  pyproject.toml  test_live.py
kira/perception/audio/: echo_cancellation.py  fast_whisper_service.py  vad.py  whisper_service.py
kira/perception/perception/: __init__.py  __main__.py  capture.py  config.py  inference.py  publisher.py
kira/perception/tests/: conftest.py  test_audio.py  test_inference.py  test_integration_flow.py  test_perception_events.py
kira/perception/tests/integration/: __init__.py  test_chatterbox_integration.py  test_moondream_integration.py  test_whisper_integration.py
kira/perception/tts/: __init__.py  chatterbox_service.py  piper_service.py
kira/perception/vlm/: __init__.py  fast_vlm_service.py  frame_diff.py  moondream_service.py
kira/scripts/: check_camera.py  setup.sh
kira/senses/: __init__.py  base.py  protocol.py  pyproject.toml
kira/senses/hearing/: __init__.py  __main__.py  sense.py
kira/senses/hearing/stt/: __init__.py  vad.py  whisper.py
kira/senses/screen/: __init__.py  __main__.py  sense.py
kira/senses/vision/: __init__.py  __main__.py  sense.py
kira/senses/vision/vlm/: __init__.py  moondream.py
kira/senses/voice/: __init__.py  __main__.py  output.py
kira/senses/voice/tts/: __init__.py  piper.py
website/: index.html  style.css
(+10 files in other folders)
